--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@
 
             <!-- 凡例 -->
             <div class="legend">
-                <span class="legend-item"><span class="shift-badge shift-early">早</span> 早番</span>
-                <span class="legend-item"><span class="shift-badge shift-late">遅</span> 遅番</span>
+                <span class="legend-item"><span class="shift-badge shift-early">早</span> 早出 7:00〜16:00</span>
+                <span class="legend-item"><span class="shift-badge shift-late">遅</span> 遅出 9:30〜18:30</span>
                 <span class="legend-item"><span class="shift-badge shift-night">夜</span> 夜勤</span>
                 <span class="legend-item"><span class="shift-badge shift-nightoff">明</span> 明け</span>
                 <span class="legend-item"><span class="shift-badge shift-off">休</span> 休み</span>
-                <span class="legend-item"><span class="shift-badge shift-overtime">通</span> 通し</span>
+                <span class="legend-item"><span class="shift-badge shift-overtime">通</span> 早残 7:00〜18:30</span>
             </div>
         </section>
     </main>
@@ -129,15 +129,27 @@
                     </select>
                 </div>
 
+                <!-- フルタイム用：夜勤設定 -->
                 <div class="form-group" id="night-shift-group">
-                    <label>
-                        <input type="checkbox" id="staff-night"> 夜勤ができる
-                    </label>
+                    <label for="staff-night-type">夜勤</label>
+                    <select id="staff-night-type">
+                        <option value="none">夜勤なし</option>
+                        <option value="all">いつでもOK</option>
+                        <option value="weekday">平日のみOK（金土日はNG）</option>
+                    </select>
                 </div>
 
+                <!-- フルタイム用：残業（通し）設定 -->
                 <div class="form-group" id="overtime-group">
                     <label>
                         <input type="checkbox" id="staff-overtime"> 残業（通し勤務）ができる
+                    </label>
+                </div>
+
+                <!-- パート用：早出のみ設定 -->
+                <div class="form-group" id="early-only-group" style="display:none">
+                    <label>
+                        <input type="checkbox" id="staff-early-only"> 早出のみ
                     </label>
                 </div>
 
@@ -146,9 +158,27 @@
                     <input type="number" id="staff-days-off" min="4" max="20" value="9">
                 </div>
 
+                <!-- パート用：週の最大出勤日数 -->
                 <div class="form-group" id="max-days-group" style="display:none">
                     <label for="staff-max-days">週の最大出勤日数</label>
                     <input type="number" id="staff-max-days" min="1" max="6" value="3">
+                </div>
+
+                <!-- 連勤上限（スタッフごとに設定可能） -->
+                <div class="form-group" id="consecutive-group">
+                    <label for="staff-max-consecutive">連勤上限日数</label>
+                    <input type="number" id="staff-max-consecutive" min="1" max="6" value="0">
+                    <span class="form-hint">0 = 自動（夜勤ありフルタイムは2日、それ以外はデフォルト）</span>
+                </div>
+
+                <!-- パート用：勤務時間入力 -->
+                <div class="form-group" id="work-hours-group" style="display:none">
+                    <label>勤務時間</label>
+                    <div class="time-input-row">
+                        <input type="time" id="staff-start-time" value="09:00">
+                        <span class="time-separator">〜</span>
+                        <input type="time" id="staff-end-time" value="17:00">
+                    </div>
                 </div>
 
                 <div class="modal-footer">
@@ -190,10 +220,10 @@
             <div class="modal-body">
                 <p id="shift-modal-info" class="shift-modal-info"></p>
                 <div class="shift-options">
-                    <button class="btn shift-option shift-early" data-shift="early">早番</button>
-                    <button class="btn shift-option shift-late" data-shift="late">遅番</button>
+                    <button class="btn shift-option shift-early" data-shift="early">早出</button>
+                    <button class="btn shift-option shift-late" data-shift="late">遅出</button>
                     <button class="btn shift-option shift-night" data-shift="night">夜勤</button>
-                    <button class="btn shift-option shift-overtime" data-shift="overtime">通し</button>
+                    <button class="btn shift-option shift-overtime" data-shift="overtime">早残</button>
                     <button class="btn shift-option shift-off" data-shift="off">休み</button>
                 </div>
                 <div id="shift-warning" class="shift-warning" style="display:none"></div>
