--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>公休表 - 介護施設シフト管理 (Ver 1.1)</title>
+    <title>公休表 - 介護施設シフト管理 (Ver 1.2)</title>
     <meta name="description" content="介護施設向けの公休表・シフト自動生成アプリ">
-    <link rel="stylesheet" href="style.css?v=1.1">
-    <link rel="stylesheet" href="print.css?v=1.1" media="print">
+    <link rel="stylesheet" href="style.css?v=1.2">
+    <link rel="stylesheet" href="print.css?v=1.2" media="print">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap"
         rel="stylesheet">
 </head>
@@ -16,7 +16,7 @@
     <!-- ヘッダー：アプリ名とナビゲーション -->
     <header class="app-header">
         <h1 class="app-title">公休表 <span style="font-size:0.6em; color:var(--text-light); margin-left:10px;">Ver
-                1.1</span></h1>
+                1.2</span></h1>
         <nav class="app-nav">
             <button class="nav-btn active" data-view="staff">スタッフ管理</button>
             <button class="nav-btn" data-view="schedule">シフト表</button>
@@ -103,6 +103,7 @@
                 <span class="legend-item"><span class="shift-badge shift-nightoff">明</span> 明け</span>
                 <span class="legend-item"><span class="shift-badge shift-off">休</span> 休み</span>
                 <span class="legend-item"><span class="shift-badge shift-overtime">A残</span> 早残 7:00〜18:30</span>
+                <span class="legend-item"><span class="shift-badge shift-part">P</span> パート（個別時間）</span>
             </div>
         </section>
     </main>
@@ -231,6 +232,7 @@
                     <button class="btn shift-option shift-late" data-shift="late">B（遅出）</button>
                     <button class="btn shift-option shift-night" data-shift="night">夜勤</button>
                     <button class="btn shift-option shift-overtime" data-shift="overtime">A残</button>
+                    <button class="btn shift-option shift-part" data-shift="part">P（パート）</button>
                     <button class="btn shift-option shift-off" data-shift="off">休み</button>
                 </div>
                 <div id="shift-warning" class="shift-warning" style="display:none"></div>
@@ -246,8 +248,8 @@
         </div>
     </div>
 
-    <script src="scheduler.js?v=1.1"></script>
-    <script src="app.js?v=1.1"></script>
+    <script src="scheduler.js?v=1.2"></script>
+    <script src="app.js?v=1.2"></script>
 </body>
 
 </html>
