--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>公休表 - 介護施設シフト管理 (Ver 1.4)</title>
+    <title>公休表 - 介護施設シフト管理 (Ver 1.5)</title>
     <meta name="description" content="介護施設向けの公休表・シフト自動生成アプリ">
-    <link rel="stylesheet" href="style.css?v=1.4">
-    <link rel="stylesheet" href="print.css?v=1.4" media="print">
+    <link rel="stylesheet" href="style.css?v=1.5">
+    <link rel="stylesheet" href="print.css?v=1.5" media="print">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;700&display=swap"
         rel="stylesheet">
 </head>
@@ -16,7 +16,7 @@
     <!-- ヘッダー：アプリ名とナビゲーション -->
     <header class="app-header">
         <h1 class="app-title">公休表 <span style="font-size:0.6em; color:var(--text-light); margin-left:10px;">Ver
-                1.3</span></h1>
+                1.5</span></h1>
         <nav class="app-nav">
             <button class="nav-btn active" data-view="staff">スタッフ管理</button>
             <button class="nav-btn" data-view="schedule">シフト表</button>
@@ -179,6 +179,14 @@
                     <span class="form-hint">0 = 自動（夜勤ありフルタイムは2日、それ以外はデフォルト）</span>
                 </div>
 
+                <!-- 連勤+1許容（月1回だけ上限+1を許す） -->
+                <div class="form-group" id="consecutive-plus1-group">
+                    <label>
+                        <input type="checkbox" id="staff-consecutive-plus1"> 連勤+1を月1回許容する
+                    </label>
+                    <span class="form-hint">ONにすると月1回だけ連勤上限+1日を許可します</span>
+                </div>
+
                 <!-- パート用：勤務時間入力 -->
                 <div class="form-group" id="work-hours-group" style="display:none">
                     <label>勤務時間</label>
@@ -248,8 +256,8 @@
         </div>
     </div>
 
-    <script src="scheduler.js?v=1.4"></script>
-    <script src="app.js?v=1.4"></script>
+    <script src="scheduler.js?v=1.5"></script>
+    <script src="app.js?v=1.5"></script>
 </body>
 
 </html>
